@@ -1,7 +1,8 @@
 meecast (0.7.4) unstable; urgency=low
 
   * Added description strings and icon to gismeteo.ru 
-  * Added icon fot forca.com
+  * Added icon fot foreca.com
+  * Fixed problem with updating
   * Added icon for openweathermap.org 
   * Added station Halikko, Finland to weather.com
 
